Changes for 1.5
* Fixed bug where you could capture territory from a power you were neutral or allied with, if you attacked an enemy on their territory. (veqryn)

* Fixed multiple bugs surround territories suddenly made hostile. And created a new class, "RouteScripted", which allows for Routes that do not follow the normal rules. (veqryn)

* Fixed bug where territories with no units, had enemy units in them from a previous turn, did not start any battle, and where therefore never taken over. (veqryn)

* Fixed null pointer in Moore AI for when it owns a factory in a territory it does not control. (veqryn)

* Created new unit attachment, "special", which currently allows for "canOnlyPlaceInOriginalTerritories". (veqryn)

* Fixed zoom out and zoom in on the map with the Mouse Wheel, by holding down the "ALT" key. (veqryn)

* Changing relationship type attachment, upkeepCost, to allow an integer percentage, which will effect all income gained during the end of turn step. (veqryn)

* Re-allow booting (boot-slapping) of admins. (veqryn)

* Allowed double clicking for selecting a game, and had the choose game list be cached, with a refresh button. (qwertgold)

* Fixed bug in stats and xml exporter where the file name contained illegal characters, causing the file creation to fail. (veqryn)

* Fixed bug where clicking cancel in order to look around the map, during casualty selection, generated an error. (frigoref)

* Fixed bugs in alliance tracker related to players not being in an alliance. (veqryn)

* Fixed bugs in 'example' maps: Tic Tac Toe, King's Table, and Sliding Tiles 8-number. (veqryn)


Changes for 1.4
* Adding politicstext.properties for Napoleonic Empires. (veqryn)

* Massive update to Napoleonic Empires: FFA, to allow it to use Politics. (veqryn)

* Updating Pact of Steel 2 and Pacific test xmls. (veqryn)

* Added scroll bars to select casualties dialog panel. (veqryn)

* Sorted political actions based on player, type, and name. (veqryn)
